Got the circleMenu from codepen work onto the project, which I didn't notice I was working with an extra div that currently became an issue after I took it off and the circle collapsed. Will be working on this...
completion: done          version: 0.4.0
branch_type: foundation   version_type: minor
branch: foundation_v0.4.0--homePage_circle_menu

--- a/src/app/pages/home/HomePage.component.scss
+++ b/src/app/pages/home/HomePage.component.scss
@@ -39,6 +39,33 @@
 //  background-color: $palette-shady-white;
 //}
 
+.home {
+  background-color: red;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  //height: auto;
+  //width: 100%;
+  //position: relative;
+}
+
+.home_-_circle-menu {
+  background-color: green;
+  //height: auto;
+  //width: 100%;
+  //display: inline-block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50% -50%);
+  //right: 0;
+  //margin: 0 auto;
+  //width: inherit;
+  //top: 25%;
+  //left: 25%;
+  //transform: translate(-25% -25%);
+}
+
 
 
 
